# gemtd

./: .gitignore  CLAUDE.md  README.md  index.html  notes.txt  package-lock.json  package.json  sim-perf-audit.md  tsconfig.json  tsconfig.worker.json  v1.5.0-changelog.txt  vite.config.ts  wrangler.jsonc
design_handoff_runes_engraved/: README.md  Runes.html  runes.jsx
migrations/: 0001_create_tables.sql  0002_wave_pressure.sql  0003_balance_telemetry.sql  0004_wave_gem_combo_key.sql  0005_wave_gem_upgrade_tier.sql  0006_sim_run_meta.sql  0007_wave_gem_assist.sql  0008_demote_air_assist.sql
src/: main.ts
tests/: armor.test.ts  balance.test.ts  blueprint-keeper-rock.test.ts  build.test.ts  burn-atkspeed-aura.test.ts  burn-kill-leveling.test.ts  burn-void-opal-aura.test.ts  combat.test.ts  combine.test.ts  container.test.ts  creep-abilities.test.ts  demote-air.test.ts  downgrade.test.ts  draw-partners.test.ts  effective-stats-cache.test.ts  eruption.test.ts  keep.test.ts  leak-cost.test.ts  pathfinding.test.ts  sim-run.test.ts  sim-telemetry.test.ts  sim.test.ts  special-clear.test.ts  special-upgrades.test.ts  targeting.test.ts  traps.test.ts  wave-difficulty.test.ts  wave-generator.test.ts  wave-groups.test.ts
tools/maze_optimizer/: beam_search.py  blueprint2.json  blueprint_v2.json  blueprint_v5.json  build_cython.py  cli.py  export_blueprint.py  fitness.py  genetic.py  grid.py  maze_output.json  maze_viz.html  maze_viz_fixed.html  maze_viz_v2.html  pathfinding.py  pathfinding_cy.c  pathfinding_cy.pyx  pyproject.toml  removal_optimizer.py  visualize.py
(+154 files in other folders)
