[project]
name = "maze-optimizer"
version = "0.1.0"
description = "GemTD maze blueprint optimizer (genetic algorithm)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "setuptools>=82.0.1",
]

[build-system]
requires = ["setuptools>=69", "cython>=3.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["grid", "pathfinding", "pathfinding_cy", "fitness", "genetic", "cli", "visualize"]

[tool.cython-build]
modules = ["pathfinding_cy.pyx"]
